# FastAPI-template

./: .dockerignore  README.md  pyproject.toml
.github/workflows/: test.yml
fastapi_template/: __main__.py  cli.py  input_model.py
fastapi_template/template/{{cookiecutter.project_name}}/: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  README.md  conditional_files.json  pyproject.toml  replaceable_files.json
fastapi_template/template/{{cookiecutter.project_name}}/.github/workflows/: tests.yml
fastapi_template/template/{{cookiecutter.project_name}}/deploy/: Dockerfile  docker-compose.yml
fastapi_template/template/{{cookiecutter.project_name}}/deploy/kube/: app.yml  db.yml  redis.yml
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __main__.py  conftest.py  logging.py  piccolo_conf.py  settings.py  tkq.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/common/: pagination.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/common/exception/: errors.py  exception_handler.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/common/response/: response_code.py  response_schema.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/core/: path_conf.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_ormar/: utils.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_ormar/dao/: dummy_dao.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_piccolo/dao/: dummy_dao.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_psycopg/: dependencies.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_psycopg/dao/: dummy_dao.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_sa/: base.py  dependencies.py  meta.py  utils.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_sa/crud/: base.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_sa/dao/: dummy_dao.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_sa/migrations/: env.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_sa/models/: dummy_model.py  users.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_sa/schemas/: base.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/db_tortoise/dao/: dummy_dao.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/middleware/: __init__.py  log_middleware.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/services/kafka/: dependencies.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/services/rabbit/: dependencies.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/services/redis/: dependency.py  lifetime.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/tests/: test_dummy.py  test_echo.py  test_kafka.py  test_rabbit.py  test_redis.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/utils/: access_log_atoms.py  health_check.py  strings.py  timezone.py  uuid6.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/web/: application.py  lifetime.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/web/api/: router.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/web/api/dummy/: schema.py  views.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/web/api/echo/: views.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/web/api/rabbit/: views.py
fastapi_template/template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/web/api/redis/: schema.py  views.py
(+5 files in other folders)
